# backend/docs/swagger.json
@@ -10,8 +10,38 @@
     "basePath": "/api/v1",
     "paths": {
         "/expenditure/category": {
+            "get": {
+                "description": "Get all expenditure categories, this API will return an error if none have been created.",
+                "tags": [
+                    "expenditure"
+                ],
+                "summary": "Get all expenditure categories",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/util.ErrorModel"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/util.ErrorModel"
+                        }
+                    }
+                }
+            },
             "post": {
-                "description": "Create a new expenditure category, this API will throw an error if the category has already been created.",
+                "description": "Create a new expenditure category, this API will return an error if the category has already been created.",
                 "tags": [
                     "expenditure"
                 ],
